# shot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  agent.toml.example
.github/workflows/: docker.yml  gateway.yml
armaments/: Cargo.toml
armaments/defaults/: telegram.toml
armaments/src/: main.rs
defaults/: SOUL.md
defaults/tools/: file_read.toml  file_write.toml  list_files.toml  memory_recall.toml  memory_store.toml  search_text.toml  shell.toml  tg_poll.toml  tg_send.toml  web_read.toml  web_search.toml
examples/: bot-server.ts
examples/multitenant-telegram-agent/: .gitignore  README.md  bot-server.ts
examples/multitenant-telegram-agent/deploy/: deploy.sh  shot-bot.service  startup.sh
examples/telegram-bot/: README.md  bot-server.mjs  package.json
gateway/: Dockerfile  README.md  bot-server.ts  package.json
gateway/deploy/: deploy.sh  shot-bot.service  startup.sh
shot/: Cargo.toml
shot/defaults/: SOUL.md  agent.toml
shot/defaults/skills/: project_manager.md
shot/defaults/tools/: file_read.toml  file_remove.toml  file_write.toml  list_files.toml  memory_recall.toml  memory_store.toml  search_text.toml  shell.toml  tg_send.toml  web_read.toml  web_search.toml
shot/src/: config.rs  emit.rs  lib.rs  main.rs  react.rs  run.rs  session.rs  setup.rs  tools.rs
src/: agent.rs  config.rs  emit.rs  lib.rs  main.rs  memory.rs  prompts.rs  react.rs  run.rs  session.rs  setup.rs  tools.rs
src/roles/: executor.rs  handlers.rs  mod.rs  planner.rs  supervisor.rs
src/tools/: file_read.rs  file_write.rs  list_files.rs  memory.rs  mod.rs  search_text.rs  send_file.rs  shell.rs
tests/: agent.rs
