[package]
name = "shotclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
termimad = "0.31"

[dev-dependencies]
axum = "0.8"

[[bin]]
name = "shot"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
